# legibility-dataset-generator

./: .env.example  .gitignore  GEMINI.md  app.py  benchmark_models.py  config.py  create_composite.py  deformations.py  font_loader.py  generate_calligrams_nano.py  generate_dataset.py  generate_pairs.py  pipeline.py  pyproject.toml  rate_pairs.py  renderer.py  run_full_pipeline.py  train_legibility_predictor.py  vector_deformations.py  visualize_results.py
