[project]
name = "legibility-dataset-generator"
version = "1.0.0"
description = "Generates a large-scale dataset of deformed characters for VLM legibility training."
dependencies = [
    "opencv-contrib-python",
    "numpy",
    "scikit-image",
    "Pillow",
    "tqdm",
    "fontTools",
    "scipy",
    "google-generativeai",
    "pandas",
    "python-dotenv",
    "openai>=2.6.1",
    "dashscope>=1.24.9",
    "streamlit",
    "torch",
    "transformers",
    "scikit-learn",
]

[tool.uv]
# This section is optional but good practice
# You can add tool-specific configurations here if needed

[tool.setuptools.packages.find]
exclude = ["assets*", "outputs*"]
